lab-01-java/Syntax/nameless/namelessParser.g4
// -*- Java -*- This ANTLRv4 file was machine-generated by BNFC
parser grammar namelessParser;

options {
  tokenVocab = namelessLexer;
}

@members {
}

start_Expr returns [ Syntax.nameless.Absyn.Expr result ]
  : x=expr EOF
    { $result = $x.result; }
  ;

expr returns [ Syntax.nameless.Absyn.Expr result ]
  : Surrogate_id_SYMB_16
    { $result = new Syntax.nameless.Absyn.ConstTrue(); }
  | Surrogate_id_SYMB_8
    { $result = new Syntax.nameless.Absyn.ConstFalse(); }
  | Surrogate_id_SYMB_10 p_3_2=expr Surrogate_id_SYMB_15 p_3_4=expr Surrogate_id_SYMB_7 p_3_6=expr
    { $result = new Syntax.nameless.Absyn.If($p_3_2.result,$p_3_4.result,$p_3_6.result); }
  | Surrogate_id_SYMB_0
    { $result = new Syntax.nameless.Absyn.ConstZero(); }
  | Surrogate_id_SYMB_14 p_5_2=expr
    { $result = new Syntax.nameless.Absyn.Succ($p_5_2.result); }
  | Surrogate_id_SYMB_12 p_6_2=expr
    { $result = new Syntax.nameless.Absyn.Pred($p_6_2.result); }
  | Surrogate_id_SYMB_11 p_7_2=expr
    { $result = new Syntax.nameless.Absyn.IsZero($p_7_2.result); }
  | p_8_1=IDENT
    { $result = new Syntax.nameless.Absyn.FreeVar($p_8_1.getText()); }
  | Surrogate_id_SYMB_1 p_9_2=INTEGER Surrogate_id_SYMB_2
    { $result = new Syntax.nameless.Absyn.BoundVar(Integer.parseInt($p_9_2.getText())); }
  | Surrogate_id_SYMB_9 Surrogate_id_SYMB_3 Surrogate_id_SYMB_13 p_10_4=expr Surrogate_id_SYMB_4
    { $result = new Syntax.nameless.Absyn.Abstraction($p_10_4.result); }
  | p_11_1=expr p_11_2=expr
    { $result = new Syntax.nameless.Absyn.Application($p_11_1.result,$p_11_2.result); }
  | Surrogate_id_SYMB_5 p_12_2=expr Surrogate_id_SYMB_6
    { $result = $p_12_2.result; }
  ;
